Refactored the code, added a default message in the reference class(es), added numbers of YARA rule(s) in rulesets and it is now possible to add custom file extensions for YARA files.

--- a/plast/configuration.json
+++ b/plast/configuration.json
@@ -13,5 +13,9 @@
     "PROMPT_ROUNDS": 3,
     "PROMPT_HARSH_ESCAPE": true,
     "KEEP_TEMPORARY_ARTIFACTS": false,
-    "YARA_MATCH_TIMEOUT": -1
+    "YARA_MATCH_TIMEOUT": -1,
+    "YARA_EXTENSION_FILTERS": [
+        "*.yar",
+        "*.txt"
+    ]
 }
