--- a/plast/configuration.json
+++ b/plast/configuration.json
@@ -14,6 +14,7 @@
     "PROMPT_HARSH_ESCAPE": true,
     "KEEP_TEMPORARY_ARTIFACTS": false,
     "YARA_MATCH_TIMEOUT": -1,
+    "YARA_FAST_MODE": false,
     "YARA_EXTENSION_FILTERS": [
         "*.yar",
         "*.txt"
