--- a/plast/configuration.json
+++ b/plast/configuration.json
@@ -13,6 +13,7 @@
     "PROMPT_ROUNDS": 3,
     "PROMPT_HARSH_ESCAPE": true,
     "KEEP_TEMPORARY_ARTIFACTS": false,
+    "TIMESTAMP_FORMAT": "YYYY-MM-DD HH:mm:ss",
     "YARA_MATCH_TIMEOUT": -1,
     "YARA_FAST_MODE": false,
     "YARA_EXTENSION_FILTERS": [
