Added logic diagram in README.adoc.

--- a/plast/configuration.json
+++ b/plast/configuration.json
@@ -17,7 +17,7 @@
     "YARA_MATCH_TIMEOUT": -1,
     "YARA_FAST_MODE": false,
     "YARA_INCLUDES": true,
-    "YARA_ERROR_ON_WARNING": true,
+    "YARA_ERROR_ON_WARNING": false,
     "YARA_EXTENSION_FILTERS": [
         "*.yar",
         "*.txt"
