Switched to .svg for the diagram, and added some documentation.

--- a/plast/configuration.json
+++ b/plast/configuration.json
@@ -1,5 +1,6 @@
 {
     "LOGGING_LEVEL": "info",
+    "MATCHES_FILE_BASENAME": "matches",
     "FALLBACK_PROCESSES": 4,
     "SYNTAX_HIGHLIGHTING": true,
     "HASH_ALGORITHMS": [
